# ensae-deep-learning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
models/EMNIST_2/: loss_history.pickle
models/FLOWERS_41/: loss_history.pickle
models/FashionMNIST_5/: loss_history.pickle
models/MNIST_2/: loss_history.pickle
notebooks/: Tutorial_on_Score_Based_Generative_Modeling_(PyTorch).ipynb  notebook_emnist.ipynb  notebook_fashion.ipynb  notebook_flowers.ipynb  notebook_mnist.ipynb
src/ensae_deep_learning/: sampling.py  sde.py  utils.py
