[tool.poetry]
name = "ensae-deep-learning"
version = "0.1.0"
description = ""
authors = ["Baptiste Pasquier <pasquierbaptiste@hotmail.fr>"]
readme = "README.md"
packages = [{include = "ensae_deep_learning", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
torch = "^2.0.0"
torchvision = "^0.15.1"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.23"
flake8-comprehensions = "^3.12.0"
flake8-simplify = "^0.20.0"
pep8-naming = "^0.13.3"
black = {extras = ["jupyter"], version = "^23.3.0"}
pre-commit = "^3.3.1"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
poethepoet = "^0.19.0"
ipykernel = "^6.22.0"
ipywidgets = ">=7.0,<8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poe.tasks]
init_dev = [
  { cmd = "poetry install --sync" },
  { cmd = "pre-commit install" },
]
torch_cuda = [
  { cmd = "poetry add numpy torch" },
  { cmd = "pip install torch torchvision --force-reinstall --extra-index-url https://download.pytorch.org/whl/cu118" },
]
